Works in a single window. Need to remove the mainWindow class and touch things up.

--- a/CardWindow.xaml
+++ b/CardWindow.xaml
@@ -5,7 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:card_overview_wpf"
         mc:Ignorable="d"
-        Title="Card Overview - Display" Height="300" Width="300" ResizeMode="NoResize" Closing="Window_Closing"
+        Title="Card Overview" Height="300" Width="300" ResizeMode="NoResize" Closing="Window_Closing" Loaded="Window_Loaded"
         ShowInTaskbar="True">
-    <Canvas Name="mainCanvas" />
+    <DockPanel>
+        <Menu DockPanel.Dock="Top" Height="20">
+            <MenuItem Header="Layout">
+                <MenuItem Header="_Open" Click="MenuItem_Click" />
+                <MenuItem Header="_Save" Click="MenuItem_Click_1" />
+            </MenuItem>
+            <MenuItem Header="Columns">
+                <MenuItem Header="Add" Click="MenuItem_Click_2" />
+                <MenuItem Header="Remove" Click="MenuItem_Click_4" />
+            </MenuItem>
+            <MenuItem Header="Rows">
+                <MenuItem Header="Add" Click="MenuItem_Click_3" />
+                <MenuItem Header="Remove" Click="MenuItem_Click_5" />
+            </MenuItem>
+            <MenuItem Header="About" Click="MenuItem_Click_7" />
+            <MenuItem Header="Settings" Click="MenuItem_Click_6" />
+        </Menu>
+        <Canvas Name="mainCanvas" />
+    </DockPanel>
 </Window>
