--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:card_overview_wpf"
         mc:Ignorable="d"
-        Title="Card Overview" Height="300" Width="300" Closing="Window_Closing" ResizeMode="NoResize"
-        ShowInTaskbar="True" Loaded="Window_Loaded">
+        Title="Card Overview" Height="300" Width="300" ResizeMode="NoResize" Closing="Window_Closing" Loaded="Window_Loaded"
+        ShowInTaskbar="True">
     <DockPanel>
         <Menu DockPanel.Dock="Top" Height="20">
             <MenuItem Header="Layout">
