--- a/CardView.xaml
+++ b/CardView.xaml
@@ -7,14 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="100" >
     <Grid Background="Transparent">
-        <!--<Grid.ContextMenu>
-            <ContextMenu>
-                <MenuItem Header="Select Image" Click="MenuItem_Click" />
-                <MenuItem Header="Toggle Visible" Click="MenuItem_Click_1" />
+        <Grid.ContextMenu>
+            <ContextMenu Name="modifyMenu" IsEnabled="False" Visibility="Hidden">
+                <MenuItem Header="Select Image" Click="Select_Image" />
+                <MenuItem Header="Toggle Visible" Click="Toggle_Visibility" />
             </ContextMenu>
-        </Grid.ContextMenu>-->
-        <Image x:Name="imageCard" Height="100" Width="100" Stretch="Fill" MouseLeftButtonUp="OnClick_Increment" MouseRightButtonUp="OnClick_Decrement"/>
+        </Grid.ContextMenu>
+        <Image x:Name="imageCard" Height="100" Width="100" Stretch="Fill"/>
         <TextBox x:Name="textBoxCount" Background="Black" Foreground="White" BorderBrush="White" Margin="66,66,0,0" Text="0" BorderThickness="1,1,1,1" TextWrapping="Wrap" IsReadOnly="True" TextAlignment="Center" VerticalContentAlignment="Center" FontSize="21.333"/>
+        <Rectangle Height="100" Width="100" MouseLeftButtonUp="OnClick_Increment" MouseRightButtonUp="OnClick_Decrement"/>
     </Grid>
 </UserControl>
  
